<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Remaining Life Forecast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Nandur93 Studio</string>
    <string name="nav_header_subtitle_mail" translatable="false">nandang.dhe@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Preference Titles -->
    <string name="about_header">About</string>
    <string name="update_header">Update</string>
    <string name="help_header">Help</string>

    <!-- About Preferences -->
    <string name="about_summary">Remaining Life Forecast is an application that can accurately predict the rest of human life based on name and age and the cause of death.\nDeveloped by Nandur93 Studio - Karawang, Indonesia.</string>

    <!-- Update Preferences -->
    <string name="update_title">Check for update</string>

    <!-- Feedback Preferences -->
    <string name="feedback_title">Feedback</string>
    <string name="choose_email_client">Choose Email Client</string>
    <string name="feedback_body">Feedback for</string>

    <!-- Version Preferences -->
    <string name="version_title">Version</string>
    <string name="version_summary" translatable="false">1.0.0</string>
    <string name="button_check">Predict!</string>
    <string name="hint_my_age">My age:</string>
    <string name="hint_my_name">Hi, my name is:</string>
    <string name="textview_welcome">Welcome Human!!!</string>
    <string name="toast_empty_nameage">Name or age cannot be empty</string>
    <string name="toast_name_limit">Name of at least 2 characters</string>
    <string name="predict_pattern">Hi {0}, your age is {1}, and your remaining life is {2}. You will die {3}.</string>
    <string name="update_summary">Tap here to check for updates</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="menu_title_communicate">Communicate</string>
    <string name="bitly_share" translatable="false">https://bit.ly/</string>
    <string name="bitly_dynamic" translatable="false">RLFAPP</string>
    <string name="build_title" translatable="false">Build</string>
    <string name="update_xml_resource" translatable="false">https://raw.githubusercontent.com/nandur93/ramal-sisa-umur/master/update-changelog.xml</string>
    <string name="pattern_mailbody">\n\n-----------------------------\nPlease do not delete this section\nDevice OS: Android\nDevice OS version: {0}\nApp Version: {1}\nDevice Brand: {2}\nDevice Model: {3}\nDevice Manufacturer: {4}</string>
    <string name="hashtag" translatable="false">#RLFAPP, #AgePrediction, #AplikasiKematian</string>

    <!-- Admob -->
    <string name="test_admob_app_id" translatable="false" tools:keep="@string/test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="real_admob_app_id" translatable="false" tools:keep="@string/real_admob_app_id">ca-app-pub-4368595636314473~3548156751</string>

    <!--test unit-->
    <string name="test_banner_ad_unit_id" translatable="false" tools:keep="@string/test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string> <!--test banner-->
    <string name="test_interestial_ad_unit_id" translatable="false" tools:keep="@string/test_interestial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string> <!--test interestial-->
    <string name="test_interestial_video_ad_unit_id" translatable="false" tools:keep="@string/test_interestial_video_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string> <!--test interestial video-->
    <string name="test_rewarded_video_ad_unit_id" translatable="false" tools:keep="@string/test_rewarded_video_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string> <!--test rewarded video-->
    <string name="test_native_advanced_ad_unit_id" translatable="false" tools:keep="@string/test_native_advanced_ad_unit_id">ca-app-pub-3940256099942544/1044960115</string> <!--test native advanced-->
    <string name="test_native_advanced_video_ad_unit_id" translatable="false" tools:keep="@string/test_native_advanced_video_ad_unit_id">ca-app-pub-3940256099942544/1044960115</string> <!--test native advanced video-->

    <!--real unit-->
    <string name="real_banner_ad_unit_id" translatable="false" tools:keep="@string/real_banner_ad_unit_id">ca-app-pub-4368595636314473/4641746570</string> <!--v1BannerRSU-->
    <string name="real_interestial_ad_unit_id" translatable="false" tools:keep="@string/real_interestial_ad_unit_id">ca-app-pub-4368595636314473/2850454071</string> <!--v1InterestialRSU-->
    <!--string name="test_interestial_video_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/8691691433</string--> <!--test interestial video-->
    <string name="real_rewarded_video_ad_unit_id" translatable="false" tools:keep="@string/real_rewarded_video_ad_unit_id">ca-app-pub-4368595636314473/6611952727</string> <!--v1RewardedRSU-->
    <string name="real_native_ad_unit_id" translatable="false" tools:keep="@string/real_native_ad_unit_id">ca-app-pub-4368595636314473/4286523358</string> <!--v1NativeRSU-->
    <!--string name="test_native_advanced_video_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1044960115</string--> <!--test native advanced video-->

    <string name="ad_test_device" translatable="false" tools:keep="@string/ad_test_device">14B7B6CB0DE972D44CD0321BEF76CBC6</string> <!--SAMSUNG J7+-->
    <string name="button_show_ad">Show Ad to get free Predict</string>
    <string name="ad_unavailable">Ad unavailable, please restart the app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_birthday">My birthday:</string>
    <string name="bitly_direct" translatable="false">RLFv201b8</string>
    <string name="ofc_website">"Ofc Website ==> "</string>
    <string name="direct_download">"Free download => "</string>
    <string name="watch_ad_to_get_free">Watch ad to get 3 free predicts!</string>
    <string name="congrats_got_free">Congratulations, you got 3 more free predicts!</string>

</resources>
