<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:layout_marginTop="15dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/textViewWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview_welcome"
                    android:textSize="12pt"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:paddingTop="10dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_my_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:inputType="textPersonName|textCapWords"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:paddingTop="10dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_my_age">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TextInputUsia"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textViewResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12pt"/>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="12pt"
            android:text="@string/button_check"
            android:padding="15dip"
            android:elevation="2dp"
            android:background="@color/colorPrimaryDark" />
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/real_banner_ad_unit_id"
            android:background="@color/colorPrimaryDark">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>